--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "NVIDIA Morpheus",
   "main": ".webpack/main",
   "scripts": {
-    "start": "electron-forge start --inspect-electron",
+    "start": "NODE_OPTIONS='--abort-on-uncaught-exception' electron-forge start --inspect-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -20,45 +20,6 @@
   },
   "license": "MIT",
   "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "linux"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ],
-      "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
-            "devServer": { "liveReload": false },
-            "mainConfig": "./webpack.main.config.js",
-            "renderer": {
-              "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
-                  "name": "main_window"
-                }
-              ]
-            },
-            "devContentSecurityPolicy": "default-src 'self' 'unsafe-eval' 'unsafe-inline' data:; script-src 'self' 'unsafe-eval' 'unsafe-inline' data:; script-src-elem 'self' 'unsafe-eval' 'unsafe-inline' unpkg.com *.unpkg.com data:;"
-          }
-        ]
-      ]
-    },
     "forge": "./forge.config.js"
   },
   "devDependencies": {
@@ -94,11 +55,14 @@
     "@loaders.gl/core": "3.1.6",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "bufferutil": "4.0.6",
+    "utf-8-validate": "5.0.9",
     "electron-squirrel-startup": "^1.0.0",
     "ix": "4.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "webpack": "^5.0.0"
+    "webpack": "^5.0.0",
+    "ws": "8.5.0"
   },
   "workspaces": [
     "rapidsai/node_modules/@rapidsai/core",
