--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "license": "MIT",
   "config": {
-    "forge": "./forge.config.js"
+    "forge": "./config/forge.config.js"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
@@ -52,15 +52,22 @@
     "@deck.gl/react": "8.6.6",
     "@fortawesome/fontawesome-svg-core": "1.3.0",
     "@fortawesome/free-solid-svg-icons": "6.0.0",
+    "@fortawesome/react-fontawesome": "0.1.17",
     "@loaders.gl/core": "3.1.6",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/recompose": "0.30.10",
+    "@types/react-bootstrap": "0.32.29",
+    "bootstrap": "5.1.3",
     "bufferutil": "4.0.6",
-    "utf-8-validate": "5.0.9",
     "electron-squirrel-startup": "^1.0.0",
     "ix": "4.5.2",
     "react": "17.0.2",
+    "react-bootstrap": "2.2.1",
+    "react-bootstrap-range-slider": "3.0.3",
+    "recompose": "0.30.0",
     "react-dom": "17.0.2",
+    "utf-8-validate": "5.0.9",
     "webpack": "^5.0.0",
     "ws": "8.5.0"
   },
