--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
-  "name": "morpheus-ebc",
-  "productName": "morpheus-ebc",
+  "name": "nvidia-morpheus-graphvis",
+  "productName": "nvidia-morpheus-graphvis",
   "version": "1.0.0",
-  "description": "NVIDIA Morpheus",
+  "description": "NVIDIA Morpheus GraphVis",
   "main": ".webpack/main",
   "scripts": {
-    "start": "NODE_OPTIONS='--abort-on-uncaught-exception' electron-forge start --inspect-electron",
+    "start": "electron-forge start --inspect-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -36,20 +36,26 @@
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
     "css-loader": "^6.0.0",
     "electron": "17.0.1",
+    "electron-forge-maker-appimage": "trusktr/electron-forge-maker-appimage#patch-1",
     "electron-installer-debian": "^3.1.0",
     "electron-installer-redhat": "^3.3.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "node-loader": "^2.0.0",
+    "sass-loader": "^12.6.0",
+    "sass": "^1.49.9",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
     "typescript": "~4.5.5"
   },
   "dependencies": {
-    "@luma.gl/core": "8.5.10",
     "@deck.gl/core": "8.6.6",
+    "@deck.gl/layers": "8.6.6",
     "@deck.gl/react": "8.6.6",
+    "@luma.gl/core": "8.5.10",
+    "@luma.gl/engine": "8.5.10",
+    "@luma.gl/webgl": "8.5.10",
     "@fortawesome/fontawesome-svg-core": "1.3.0",
     "@fortawesome/free-solid-svg-icons": "6.0.0",
     "@fortawesome/react-fontawesome": "0.1.17",
@@ -74,17 +80,9 @@
   "workspaces": [
     "rapidsai/node_modules/@rapidsai/core",
     "rapidsai/node_modules/@rapidsai/cuda",
-    "rapidsai/node_modules/@rapidsai/cudf",
-    "rapidsai/node_modules/@rapidsai/cugraph",
-    "rapidsai/node_modules/@rapidsai/cuml",
-    "rapidsai/node_modules/@rapidsai/cuspatial",
-    "rapidsai/node_modules/@rapidsai/deck.gl",
-    "rapidsai/node_modules/@rapidsai/glfw",
-    "rapidsai/node_modules/@rapidsai/io",
-    "rapidsai/node_modules/@rapidsai/jsdom",
     "rapidsai/node_modules/@rapidsai/rmm",
-    "rapidsai/node_modules/@rapidsai/sql",
-    "rapidsai/node_modules/@rapidsai/webgl",
-    "rapidsai/node_modules/wrtc"
+    "rapidsai/node_modules/@rapidsai/cudf",
+    "rapidsai/node_modules/@rapidsai/cuml",
+    "rapidsai/node_modules/@rapidsai/cugraph"
   ]
 }
