--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
     "css-loader": "^6.0.0",
     "electron": "17.0.1",
-    "electron-forge-maker-appimage": "trusktr/electron-forge-maker-appimage#patch-1",
+    "electron-forge-maker-appimage": "git://github.com/trusktr/electron-forge-maker-appimage.git#patch-1",
     "electron-installer-debian": "^3.1.0",
     "electron-installer-redhat": "^3.3.0",
     "eslint": "^8.0.1",
