--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "description": "NVIDIA Morpheus GraphVis",
   "main": ".webpack/main",
   "scripts": {
+    "bootstrap": "./npm-install.sh",
     "start": "electron-forge start --inspect-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx .",
-    "preinstall": "./install-node-rapids.sh"
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
   "author": {
@@ -60,6 +60,12 @@
     "@fortawesome/free-solid-svg-icons": "6.0.0",
     "@fortawesome/react-fontawesome": "0.1.17",
     "@loaders.gl/core": "3.1.6",
+    "@rapidsai/core": "file:./rapidsai/rapidsai-core-0.0.1.tgz",
+    "@rapidsai/cuda": "file:./rapidsai/rapidsai-cuda-0.0.1.tgz",
+    "@rapidsai/rmm": "file:./rapidsai/rapidsai-rmm-0.0.1.tgz",
+    "@rapidsai/cudf": "file:./rapidsai/rapidsai-cudf-0.0.1.tgz",
+    "@rapidsai/cuml": "file:./rapidsai/rapidsai-cuml-0.0.1.tgz",
+    "@rapidsai/cugraph": "file:./rapidsai/rapidsai-cugraph-0.0.1.tgz",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/recompose": "0.30.10",
@@ -76,13 +82,5 @@
     "utf-8-validate": "5.0.9",
     "webpack": "^5.0.0",
     "ws": "8.5.0"
-  },
-  "workspaces": [
-    "rapidsai/node_modules/@rapidsai/core",
-    "rapidsai/node_modules/@rapidsai/cuda",
-    "rapidsai/node_modules/@rapidsai/rmm",
-    "rapidsai/node_modules/@rapidsai/cudf",
-    "rapidsai/node_modules/@rapidsai/cuml",
-    "rapidsai/node_modules/@rapidsai/cugraph"
-  ]
+  }
 }
