--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react": "17.0.2",
     "react-bootstrap": "2.2.1",
     "react-bootstrap-range-slider": "3.0.3",
-    "recompose": "0.30.0",
+    "recompose": "npm:react-recompose@0.31.2",
     "react-dom": "17.0.2",
     "utf-8-validate": "5.0.9",
     "webpack": "^5.0.0",
