--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "build_and_start": "yarn make && yarn start"
   },
   "keywords": [],
   "author": {
@@ -29,11 +30,11 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
     "@electron-forge/plugin-webpack": "6.0.0-beta.64",
-    "@timfish/forge-externals-plugin": "0.1.2",
+    "@timfish/forge-externals-plugin": "0.2.0",
     "@luma.gl/debug": "8.5.10",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@vercel/webpack-asset-relocator-loader": "1.7.0",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
     "electron": "19.0.8",
     "electron-forge-maker-appimage": "git://github.com/trusktr/electron-forge-maker-appimage.git#patch-1",
