--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx .",
-    "build_and_start": "yarn make && yarn start"
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
   "author": {
