--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "description": "NVIDIA Morpheus GraphVis",
   "main": ".webpack/main",
   "scripts": {
-    "bootstrap": "./npm-install.sh",
     "start": "electron-forge start --inspect-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -60,12 +59,10 @@
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.17",
     "@loaders.gl/core": "3.1.6",
-    "@rapidsai/core": "file:./rapidsai/rapidsai-core-22.6.0.tgz",
-    "@rapidsai/cuda": "file:./rapidsai/rapidsai-cuda-22.6.0.tgz",
-    "@rapidsai/rmm": "file:./rapidsai/rapidsai-rmm-22.6.0.tgz",
-    "@rapidsai/cudf": "file:./rapidsai/rapidsai-cudf-22.6.0.tgz",
-    "@rapidsai/cuml": "file:./rapidsai/rapidsai-cuml-22.6.0.tgz",
-    "@rapidsai/cugraph": "file:./rapidsai/rapidsai-cugraph-22.6.0.tgz",
+    "@rapidsai/cuda": "22.6.2",
+    "@rapidsai/rmm": "22.6.2",
+    "@rapidsai/cudf": "22.6.2",
+    "@rapidsai/cugraph": "22.6.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/recompose": "0.30.10",
