--- a/morpheus-DFP/package.json
+++ b/morpheus-DFP/package.json
@@ -18,7 +18,7 @@
     "d3-node": "^3.0.0",
     "echarts": "^5.4.0",
     "echarts-for-react": "^3.0.2",
-    "next": "^13.0.0",
+    "next": "^12.0.0",
     "next-transpile-modules": "^9.1.0",
     "node-cache": "5.1.2",
     "rc-slider": "^10.0.1",
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
+    "sharp": "0.31.2",
     "three": "^0.146.0"
   },
   "devDependencies": {
