--- a/.github/workflows/release_procedures.yml
+++ b/.github/workflows/release_procedures.yml
@@ -72,8 +72,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: false
-          path: ${REPO_NAME}
-          ref: branch-${CURRENT_VERSION}
+          path: ${{ env.REPO_NAME }}
+          ref: branch-${{ env.CURRENT_VERSION }}
           sparse-checkout: |
             ci/release
       - name: Create PR
