--- a/.github/workflows/release_procedures.yml
+++ b/.github/workflows/release_procedures.yml
@@ -91,8 +91,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: true
-          path: ${REPO_NAME}
-          ref: branch-${CURRENT_VERSION}
+          path: ${{ env.REPO_NAME }}
+          ref: branch-${{ env.CURRENT_VERSION }}
           fetch-depth: 0 # Fetch all history for all tags and branches
       - name: Setup Git user
         run: |
@@ -100,6 +100,7 @@ jobs:
           git config user.email github-actions@github.com
       - name: Create branch
         run: |
+          cd ${REPO_NAME}
           git checkout -b branch-${NEXT_VERSION}
           git commit --allow-empty -m "Creating branch for v${NEXT_VERSION}"
           git tag -a -m "Alpha release of v${NEXT_VERSION}" v${NEXT_FULL_VERSION}a
