--- a/.github/workflows/release_procedures.yml
+++ b/.github/workflows/release_procedures.yml
@@ -101,6 +101,7 @@ jobs:
           git config user.email github-actions@github.com
       - name: Create branch
         run: |
+          cd ${REPO_NAME}
           git checkout -b branch-${NEXT_VERSION}
           git commit --allow-empty -m "Creating branch for v${NEXT_VERSION}"
           git tag -a -m "Alpha release of v${NEXT_VERSION}" v${NEXT_FULL_VERSION}a
