--- a/.github/workflows/release_procedures.yml
+++ b/.github/workflows/release_procedures.yml
@@ -114,11 +114,16 @@ jobs:
           gh auth status
           echo "Printing auth for different token"
           GITHUB_TOKEN=${{ steps.generate-token.outputs.token }} gh auth status
+          echo "GITHUB_TOKEN=${{ steps.generate-token.outputs.token }}" << $GITHUB_ENV
+          gh auth refresh
+          gh auth setup-git
       - name: Setup Git user
         run: |
           cd ${REPO_NAME}
           git config user.name "morpheus-bot-test[bot]"
           git config user.email "152534332+morpheus-bot-test[bot]@users.noreply.github.com"
+          git config url.https://${{ steps.generate-token.outputs.token }}@github.com/.insteadOf https://github.com/
+          gh auth se
       - name: Create branch
         run: |
           cd ${REPO_NAME}
