--- a/.github/workflows/release_procedures.yml
+++ b/.github/workflows/release_procedures.yml
@@ -128,6 +128,7 @@ jobs:
           git checkout -b branch-${NEXT_VERSION}
           git commit --allow-empty -m "Creating branch for v${NEXT_VERSION}"
           git tag -a -m "Alpha release of v${NEXT_VERSION}" v${NEXT_FULL_VERSION}a
+          git push origin branch-${NEXT_VERSION} v${NEXT_FULL_VERSION}a
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
