--- a/.github/actions/configure-morpheus-bot/action.yml
+++ b/.github/actions/configure-morpheus-bot/action.yml
@@ -42,8 +42,8 @@ runs:
     - name: Configure Git
       shell: bash
       run: |
-        git config -g user.name "morpheus-bot-test[bot]"
-        git config -g user.email "152534332+morpheus-bot-test[bot]@users.noreply.github.com"
+        git config --global user.name "morpheus-bot-test[bot]"
+        git config --global user.email "152534332+morpheus-bot-test[bot]@users.noreply.github.com"
         echo "GITHUB_TOKEN=${{ steps.generate-token.outputs.token }}" >> "$GITHUB_ENV"
         echo "Git config:"
         git config -l --show-origin
