--- a/.github/workflows/release_procedures.yml
+++ b/.github/workflows/release_procedures.yml
@@ -143,7 +143,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: false
-          path: ${REPO_NAME}
+          path: ${{ env.REPO_NAME }}
           ref: branch-${NEXT_VERSION}
           token: ${{ steps.configure-bot.outputs.token }}
       - name: Run update script
@@ -173,7 +173,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: false
-          path: ${REPO_NAME}
+          path: ${{ env.REPO_NAME }}
           ref: branch-${CURRENT_VERSION}
           token: ${{ steps.configure-bot.outputs.token }}
       - name: Update the CHANGELOG.md file
@@ -227,7 +227,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: false
-          path: ${REPO_NAME}
+          path: ${{ env.REPO_NAME }}
           ref: main
           fetch-tags: true # Fetch all tags
           token: ${{ steps.configure-bot.outputs.token }}
