--- a/.github/workflows/release_procedures.yml
+++ b/.github/workflows/release_procedures.yml
@@ -144,7 +144,7 @@ jobs:
         with:
           lfs: false
           path: ${{ env.REPO_NAME }}
-          ref: branch-${NEXT_VERSION}
+          ref: branch-${{ env.NEXT_VERSION }}
           token: ${{ steps.configure-bot.outputs.token }}
       - name: Run update script
         run: |
@@ -174,7 +174,7 @@ jobs:
         with:
           lfs: false
           path: ${{ env.REPO_NAME }}
-          ref: branch-${CURRENT_VERSION}
+          ref: branch-${{ env.CURRENT_VERSION }}
           token: ${{ steps.configure-bot.outputs.token }}
       - name: Update the CHANGELOG.md file
         run: |
